# WEB3-CORPS

./: Cargo.toml  Dockerfile  README.md  env.example  justfile
.github/workflows/: rust_ci.yml
config/: settings.json
src/: lib.rs  main.rs
src/agent/: ceo.rs  cfo.rs  cmo.rs  community_lead.rs  compliance_officer.rs  crawler.rs  crawler_agent.rs  cto.rs  depin_manager.rs  dpo.rs  gas_economist.rs  genesis.rs  interop_architect.rs  investor_relations.rs  l3_engineer.rs  legal_counsel.rs  manager.rs  mod.rs  ops_manager.rs  procurement.rs  proptech_agent.rs  red_team_lead.rs  risk_analyst.rs  sdr.rs  talent_acquisition.rs
src/api/: mod.rs  rpc.rs
src/compliance/: mod.rs
src/crypto/: mod.rs  mpc.rs  wallet.rs
src/finance/: mev_guard.rs  mod.rs  tokenomics.rs  yield_strategist.rs
src/hr/: mod.rs  payroll.rs
src/identity/: Makefile  did.rs
src/insurance/: mod.rs  pool.rs
src/layer3/: block_explorer.rs  gas_paymaster.rs  interoperability.rs  mod.rs  rollup.rs
src/legal/: contract_validator.rs  mod.rs
src/localization/: mod.rs  translator.rs
src/marketing/: mod.rs  sentiment.rs
src/mesh/: communication.rs  event_mesh.rs  mod.rs  p2p_node.rs
src/oracle/: chainlink.rs  mod.rs
src/proptech/: depin_node.rs  iot_sensor.rs  leasing.rs  mod.rs  residential.rs  tokenization.rs
src/security/: adversarial_eval.rs  circuit_breaker.rs  guardrails.rs  mod.rs  red_team.rs
tests/: agent_tests.rs  compliance_tests.rs  finance_tests.rs  identity_tests.rs  localization_tests.rs  mesh_tests.rs  oracle_tests.rs  proptech_tests.rs  security_tests.rs
(+6 files in other folders)
